# wanna

./: README.md
wanna-python/src/wanna_api/: .env.example  .gitignore  README.md  pyproject.toml
wanna-python/src/wanna_api/src/wanna_api/: app.py  asgi.py  settings.py  urls.py
wanna-python/src/wanna_api/tests/: test_app.py
wanna-python/src/wanna_core/: .env.example  README.md  pyproject.toml
wanna-python/src/wanna_core/src/wanna_core/: db.py  event.py  user.py
wanna-ui/wanna_flutter/: README.md  pubspec.yaml
wanna-ui/wanna_flutter/android/app/: build.gradle
wanna-ui/wanna_flutter/android/app/src/main/: AndroidManifest.xml
wanna-ui/wanna_flutter/android/app/src/main/kotlin/com/example/wanna_flutter/: MainActivity.kt
wanna-ui/wanna_flutter/ios/Runner/: Info.plist
wanna-ui/wanna_flutter/ios/Runner.xcodeproj/: project.pbxproj
wanna-ui/wanna_flutter/lib/: main.dart
wanna-ui/wanna_flutter/lib/src/: app.dart
wanna-ui/wanna_flutter/lib/src/create/: create.dart
wanna-ui/wanna_flutter/lib/src/feed/: feed.dart
wanna-ui/wanna_flutter/lib/src/profile/: profile.dart
wanna-ui/wanna_flutter/lib/src/theme/: theme.dart  theme_provider.dart
wanna-ui/wanna_flutter/linux/: CMakeLists.txt
wanna-ui/wanna_flutter/linux/runner/: my_application.cc
wanna-ui/wanna_flutter/macos/Runner.xcodeproj/: project.pbxproj
wanna-ui/wanna_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
wanna-ui/wanna_flutter/macos/Runner/Configs/: AppInfo.xcconfig
wanna-ui/wanna_flutter/web/: index.html  manifest.json
wanna-ui/wanna_flutter/windows/: CMakeLists.txt
wanna-ui/wanna_flutter/windows/runner/: Runner.rc  main.cpp
